cluster/sputnik_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "sputnik"
  labels:
    app.kubernetes.io/name: sputnik
    foo: "bar"
spec:
  containers:
  - image: "quay.io/rludva/sputnik:1.03"
    name: "sputnik"
    securityContext:
      seccompProfile:
        type: RuntimeDefault
    ports:                              
    - containerPort: 8080
      protocol: TCP
    resources:
      request:
        cpu: 200m
        memory: 1Gi
      limits:
        cpu: 200m
        memory: 1Gi
