cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sputnik
spec:
  selector:
    app.kubernetes.io/name: sputnik
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
